# CharaSeed

./: .gitignore  AGENT.md  AGENTS.md  README.md  TODO.md  anime_collection_product_brief.md  pyproject.toml
app/: config.py  db.py  main.py  models.py  search_types.py  site_profiles.py
app/adapters/: anilist.py  bangumi.py  base.py  booth.py  bowlroll.py  danbooru.py  e_shuushuu.py  hpoi.py  konachan.py  myanimelist.py  myfigurecollection.py  safebooru.py  sketchfab.py  yandere.py  zerochan.py
app/services/: catalog.py  feed.py  search.py
app/static/: styles.css
app/templates/: base.html  discover.html  entities.html  entity_detail.html  home.html  info.html  item_detail.html  library.html  manual_new.html
app/templates/partials/: collect_form.html  home_feed.html  home_feed_cards.html  home_site_panel.html  item_preview.html  result_cards.html  search_results.html
docs/superpowers/specs/: 2026-03-17-anime-collection-mvp-design.md  2026-03-17-collector-showcase-ui-refresh-design.md  2026-03-17-first-group-optimization-design.md  2026-03-17-home-discover-card-refresh-design.md  2026-03-17-home-feed-recovery-and-source-expansion-design.md  2026-03-17-source-registry-navigation-and-info-design.md
tests/: test_app.py
